Actualizado con polifyll

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>
 
-    <p>Obtén tu posición</p>
+    <p>¿Cuál es tu posición?</p>
 
     <button id="geo">Posición</button>
 
